# todo-cli

./: README.md  pyproject.toml
tests/: test_todo_app.py
todo_cli/: main.py  todo_app.py
